--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@mui/material": "^5.15.11",
     "@mui/system": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.1",
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -46,5 +49,10 @@
       "@babel/preset-env",
       "@babel/preset-react"
     ]
-  }
+  },
+  "description": "## Introduction",
+  "main": "setupTests.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
